--- a/custom_helppage.libraries.yml
+++ b/custom_helppage.libraries.yml
@@ -1,6 +1,10 @@
 # Custom module library for general purposes.
-custom_helppage:
-  version: 1.x
+custom_helppage.pages:
   css:
     theme:
       css/custom-helppage.css: {}
+
+custom_helppage.tree:
+  css:
+    theme:
+      css/custom-helppage.toolbar.css: {}
